fix overflow

--- a/app/assets/stylesheets/browse.scss
+++ b/app/assets/stylesheets/browse.scss
@@ -25,6 +25,10 @@ body {
   position: relative;
   padding-bottom: 20px;
   width: 91.4vw;
+  overflow: hidden;
+}
+
+.single-category:hover {
   overflow: scroll;
 }
 
